--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "licence": "MIT",
   "version": "2.0.0",
   "private": false,
+  "proxy": "http://localhost:8080",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -21,6 +22,7 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "axios": "^0.27.2",
     "chart.js": "^3.5.1",
     "date-fns": "^2.25.0",
     "formik": "^2.1.5",
@@ -32,6 +34,7 @@
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-router-dom": "^6.3.0",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
